--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -65,7 +65,6 @@ android {
 }
 
 dependencies {
-    implementation project(":tunnel")
     implementation "androidx.annotation:annotation:$annotationsVersion"
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
     implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
@@ -81,6 +80,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
     implementation "net.sourceforge.streamsupport:android-retrofuture:$streamsupportVersion"
+    implementation 'com.wireguard.android:tunnel:1.0.20200407'
 }
 
 tasks.withType(JavaCompile) {
