--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ buildscript {
         gsonVersion = '2.8.6'
         retrofitVersion = '2.7.2'
         converterGsonVersion = '2.7.2'
+        appcompatVersion = '1.1.0'
+        constraintlayoutVersion = '1.1.3'
+        lifecycleExtensionVersion = '2.2.0'
 
         groupName = 'com.wireguard.android'
     }
