Changes UI Login Activity removed start new Bubble views and add dependency for View Model.

--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -91,6 +91,7 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayoutVersion"
 
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleExtensionVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycleViewModelVersion"
 }
 
 tasks.withType(JavaCompile) {
