--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ buildscript {
         appcompatVersion = '1.1.0'
         constraintlayoutVersion = '1.1.3'
         lifecycleExtensionVersion = '2.2.0'
+        lifecycleViewModelVersion = '2.2.0'
 
         groupName = 'com.wireguard.android'
     }
