--- a/ui/src/main/AndroidManifest.xml
+++ b/ui/src/main/AndroidManifest.xml
@@ -47,12 +47,7 @@
             android:name=".activity.TunnelToggleActivity"
             android:theme="@style/NoBackgroundTheme" />
         <activity android:name=".activity.MainWireGuardActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
-            </intent-filter>
+            <!--TODO: Review if the filter is needed for the Bubble app"-->
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />
             </intent-filter>
