Commented QS_TITLE intent filter.

--- a/ui/src/main/AndroidManifest.xml
+++ b/ui/src/main/AndroidManifest.xml
@@ -49,9 +49,9 @@
             android:theme="@style/NoBackgroundTheme" />
         <activity android:name=".activity.MainWireGuardActivity">
             <!--TODO: Review if the filter is needed for the Bubble app"-->
-            <intent-filter>
-                <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />
-            </intent-filter>
+<!--            <intent-filter>-->
+<!--                <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />-->
+<!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".activity.SettingsActivity"
