--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -90,6 +90,10 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayoutVersion"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleExtensionVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycleViewModelVersion"
+    //RxJava
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroidVersion"
+    implementation "io.reactivex.rxjava2:rxjava:$rxjavaVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$adapterrxjava2Version"
 }
 
 tasks.withType(JavaCompile) {
