--- a/ui/src/main/AndroidManifest.xml
+++ b/ui/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         android:name=".Application"
         android:allowBackup="false"
         android:banner="@mipmap/banner"
-        android:icon="@mipmap/app_icon"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/bubble_app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
